styled the text in assignee card, stage summay, stage headers, stage label and increased padding in the filter wrapper to resolve alignment

--- a/src/styles/_stage-slot.scss
+++ b/src/styles/_stage-slot.scss
@@ -4,7 +4,7 @@ $block-class:'stage-slot';
 
 @at-root {
     .#{$block-class} {
-        color: lighten($font-color, 5%);
+        color: $lead-font-color;
         font-size: 16px;
         padding: 16px;
         min-height: 104px;
@@ -22,7 +22,7 @@ $block-class:'stage-slot';
         }
 
         &__filtered {
-            opacity: 0.5;
+            opacity: 0.2;
         }
 
         &__name-row {
